--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,108 +1,205 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Raleway", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Raleway", sans-serif;
 }
-h2{
-    font-weight: 300;
+h2 {
+  font-weight: 300;
 }
-.logo{
-    width: 25vw;
-    padding-top: .5rem;
+.logo {
+  width: 25vw;
+  padding-top: 0.5rem;
 }
-.container{
-    margin: 0px 2rem;
+.container {
+  margin: 0px 2rem;
 }
-.navegacion{
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: space-around;
+.navegacion {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-around;
 }
-.header{
-    background-image: url(../img/banner.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 60vh;
+.header {
+  background-image: url(../img/banner.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 60vh;
 
-    .texto-header{
-padding-left: 2rem;
-padding-top: 3rem;
-color: #fff;
-width: 70vw;
- & h1{
-font-weight: 400;
- }
- & p{
-    font-size: 1em;
-    padding-bottom: 2rem;
-    padding-top: 1rem;
- }
-
+  .texto-header {
+    padding-left: 2rem;
+    padding-top: 3rem;
+    color: #fff;
+    width: 70vw;
+    & h1 {
+      font-weight: 400;
     }
-    .btn-ver-coleccion{
-        padding: .5rem 1rem;
-        border-radius: 4px;
-        border: none;
-        box-shadow: 2px 2px 10px #E4AD52;
-        padding: .7rem 1.2rem;
-        font-weight: 500;
-        text-transform: uppercase;
+    & p {
+      font-size: 1em;
+      padding-bottom: 2rem;
+      padding-top: 1rem;
     }
+  }
+  .btn-ver-coleccion {
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 2px 2px 10px #e4ad52;
+    padding: 0.7rem 1.2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
 }
-.banner-info{
+.banner-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  .info {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    .info{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        row-gap: .6rem;
-        padding-top: 1.5rem;
-        & i{
-            font-size: 2em;
-        }
-        p{
-            text-align: center;
-            font-weight: 200;
-        }
+    row-gap: 0.6rem;
+    padding-top: 1.5rem;
+    & i {
+      font-size: 2em;
     }
+    p {
+      text-align: center;
+      font-weight: 200;
     }
-.divider{
-    border: .01em solid #e4ad52;
-    margin: 2rem 0px;
+  }
 }
-.variedad-metal{
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-    margin: .5rem;
-    padding: 1rem;
+.divider {
+  border: 0.01em solid #e4ad52;
+  margin: 2rem 0px;
+}
+.variedad-metal {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  margin: 0.5rem;
+  padding: 1rem;
+  p {
+    padding-left: 0.1em;
+  }
+}
+.card-joyas {
+  background-color: #ac845540;
+}
+.card-img-joyas {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
+}
+.card {
+  height: 27vh;
+  width: 80%;
+  border: 1.6px solid #e4ad52;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #fff;
+  margin: 0.5rem 0.2rem;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.322);
+  padding-bottom: 2rem;
+}
+.card:hover {
+  transform: scale(1.1);
+}
+.nueva-coleccion {
+  text-align: center;
+  h2 {
+    padding: 2rem;
+    font-weight: 400;
+  }
+}
+.precio-carrito {
+  display: flex;
+  padding-left: 1rem;
+  padding-top: 0.2rem;
+  font-weight: 300;
+  h6 {
+    padding-right: 0.5rem;
+    font-weight: 500;
+  }
+}
+.btn-ver-mas {
+  button {
+    margin-top: 1rem;
+    border: 2px solid #ac8455;
+    color: #ac8455;
+    background: #fff;
+    text-transform: uppercase;
+    padding: 0.7rem 1.5rem;
+    border-radius: 4px;
+    font-size: 0.8em;
+  }
+}
+.promo-collar-florencia {
+  color: #fff;
+  margin-top: 1.5rem;
+  background-color: #ac8455;
+  padding: 1rem 0rem;
+  .collar-flo-uno img {
+    z-index: 99;
+    width: 120px;
+    position: absolute;
+    margin-top: 5rem;
+  }
+  .collar-flo-dos {
+    padding: 3rem;
+    img {
+      width: 220px;
+      height: 200px;
+    }
+  }
+  .descri-promo{
+    h2{
+      font-weight: 400;
+      padding-bottom: .5rem;
+    }
     p{
-        padding-left: .1em;
+      font-weight: 300;
     }
-}
-.card-joyas{
-    background-color: #AC845540;
-}
-.card-img-joyas{
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-items: center;
-    align-items: center;
-    align-content: center;
-}
-.card{
-    height: 25vh;
-    width: 70%;
-    border: 1px solid #E4AD52;
-    text-align: center;
-    border-radius: 10px;
-    background-color: #fff;
-    margin: .5rem .2rem;
-    img{
-        width: 100%;
+    h3{
+      padding-top: 1rem;
+      padding-bottom: 1rem;
     }
+    .btn-descri-flo{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .btn-ver-mas{
+        padding: .7rem 2rem;
+        text-transform: uppercase;
+        border-radius: 5px;
+        border: 2px solid #AC8455;
+        font-weight: 500;
+        font-size: .7em;
+        background-color: #fff;
+        text-wrap: nowrap;
+      }
+      .btn-agregar{
+        padding: .6rem 2rem;
+        text-transform: uppercase;
+        border-radius: 5px;
+        border: 2px solid #fff;
+        font-weight: 500;
+        font-size: .7em;
+        background-color:  #AC8455;
+        color: #fff;
+      }
+    }
+  }
+}
+.en-oferta{
+  text-align: center;
+  padding-bottom: 2rem;
+  h2{
+    padding: 1.5rem;
+  }
+  .precio-carrito{
+    display: flex;
+  }
 }
