--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 }
 h2 {
   font-weight: 300;
+  text-align: center;
 }
 .logo {
   width: 25vw;
@@ -22,6 +23,10 @@ h2 {
 }
 .links-nav {
   display: none;
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
 .header {
   background-image: url(../img/banner.png);
@@ -291,6 +296,7 @@ h2 {
       padding: 1.5rem 0rem;
       i {
         padding-right: 0.8rem;
+        color: black;
       }
     }
   }
