--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: "Raleway", sans-serif;
 }
+
 h2 {
   font-weight: 300;
   text-align: center;
@@ -33,7 +34,6 @@ h2 {
   background-repeat: no-repeat;
   background-size: cover;
   height: 60vh;
-
   .texto-header {
     padding-left: 2rem;
     padding-top: 3rem;
@@ -405,7 +405,7 @@ h2 {
     padding-bottom: 1rem;
     .card {
       .logo {
-        width: 12vw;
+        width: 50%;
       }
     }
   }
